# hass-fressnapf-tracker

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yaml  publish.yaml
custom_components/fressnapf_tracker/: __init__.py  binary_sensor.py  client.py  config_flow.py  const.py  device_tracker.py  entity.py  light.py  manifest.json  sensor.py  switch.py
custom_components/fressnapf_tracker/translations/: de.json  en.json
tests/: __init__.py  conftest.py  const.py  test_binary_sensor.py  test_config_flow.py  test_init.py  test_light.py  test_sensor.py  test_switch.py
tests/fixtures/: get_response.json  get_response_light_on.json  get_response_no_led_no_sleep_mode.json
